force-app/main/default/objects/Project_Score__c/Project_Score__c.object-meta.xml
<CustomObject>
    <description>Object for tracking project scores</description>
    <label>Project Score</label>
    <nameField>
        <label>Project Score Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>