force-app/main/default/objects/Project_Score__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Numeric score value for project evaluation</description>
    <inlineHelpText>Enter a score between 0 and 100</inlineHelpText>
    <label>Score</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>