force-app/main/default/objects/Project_Score__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>